<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FinFlow</string>
    <string name="ErrorMsgAdd">Error al registrar el dato</string>
    <string name="ErrorMsgUpdate">Error al actualizar el dato</string>
    <string name="ErrorMsgRemove">Error al eliminar el dato</string>
    <string name="ErrorMsgGetAll">Error al obtener la lista de datos</string>
    <string name="ErrorMsgGetById">Error al obtener el dato específico</string>
    <string name="btnAccountText_main">Cuentas</string>
    <string name="btnBankText_main">Bancos</string>
    <string name="bntCategoryText_main">Categorias</string>
    <string name="btnCurrencyText_main">Monedas</string>
    <string name="btnTransactionText_main">Transacción</string>
    <string name="TextID">Identificador *</string>
    <string name="TextName">Nombre *</string>
    <string name="TextType">Tipo *</string>
    <string name="TextCode">Código *</string>
    <string name="TextBank">Banco *</string>
    <string name="TextCurrency">Moneda *</string>
    <string name="TextBalance">Balance *</string>
    <string name="TextSave_menu">Guardar</string>
    <string name="TextDelete_menu">Eliminar</string>
    <string name="TextCancel_menu">Cancelar</string>
    <string name="MsgDataNoFound">El dato no fue encontrado</string>
    <string name="MsgDuplicateDate">No se permiten datos duplicados</string>
    <string name="MsgSaveSuccess">La información se guardó con éxito</string>
    <string name="MsgDeleteSuccess">La infromación se eliminó con éxito</string>
    <string name="TextTitleDialogQuestion">Pregunta...</string>
    <string name="TextSaveActionQuestion">Desea guardar la información?</string>
    <string name="TextDeleteActionQuestion">Desea eliminar la información?</string>
    <string name="TextYes">Sí</string>
    <string name="TextNo" translatable="false">No</string>
    <string name="TextTransactionList">Lista de transacciones</string>
    <string name="TextEditTransaction">Editar transacción</string>
    <string name="TextDescription">Descripción *</string>
    <string name="TextDate">Fecha</string>
    <string name="TextCategory">Categorias *</string>
    <string name="TextAccount">Cuenta *</string>
    <string name="TextAmount">Monto *</string>
</resources>