<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    tools:context=".TransactionActivity">

    <TableLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/labeltitle_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextEditTransaction" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/labelID_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextID" />

            <EditText
                android:id="@+id/txtID_transaction"
                android:layout_width="289dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/labelAmount_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextAmount" />

            <EditText
                android:id="@+id/txtAmount_transaction"
                android:layout_width="289dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/labelDescription_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextDescription" />

            <EditText
                android:id="@+id/txtDescription_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/labelView_Date_transaction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/TextDate" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/lblDate_transaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp" />

                <ImageButton
                    android:id="@+id/btnSelecteddate_transaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_menu_my_calendar" />
            </TableRow>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtView_Category_transaction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:text="@string/TextCategory" />

            <Spinner
                android:id="@+id/spinner_cateogries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtView_Account_transaction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:text="@string/TextAccount" />

            <Spinner
                android:id="@+id/spinner_accounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>