<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

        <TableLayout
            android:layout_width="409dp"
            android:layout_height="729dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtView_ID_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/TextID"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/txtID_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />

                <ImageButton
                    android:id="@+id/btnSearchId_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    app:srcCompat="@android:drawable/ic_menu_search" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtView_Name_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/TextName" />

                <EditText
                    android:id="@+id/txtName_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtView_Type_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/TextType" />

                <EditText
                    android:id="@+id/txtType_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtView_Bank_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/TextBank" />

                <EditText
                    android:id="@+id/txtBank_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtView_Currency_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/TextCurrency" />

                <EditText
                    android:id="@+id/txtCurrency_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtView_Balance_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/TextBalance" />

                <EditText
                    android:id="@+id/txtBalance_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="text" />
            </TableRow>

        </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>