<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout_currency"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrencyActivity"
    tools:menu="@menu/menu_crud">

    <TableLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtView_ID_currency"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:labelFor="@id/txtID_currency"
                android:text="@string/TextID"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtID_currency"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

            <ImageButton
                android:id="@+id/btnSearchId_currency"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                app:srcCompat="@android:drawable/ic_menu_search" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtView_Name_currency"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/TextName" />

            <EditText
                android:id="@+id/txtName_currency"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtView_Code_currency"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/TextCode" />

            <EditText
                android:id="@+id/txtCode_currency"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="text" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>